tests/miniJava/neg/004322_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { 0 public int [] java ( ) { return 0 ; } }
